docs/pages/versions/v57.0.0/sdk/ui/swift-ui/section.mdx
---
title: Section
description: A SwiftUI Section component for grouping content within lists and forms.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Section matches the official SwiftUI [Section API](https://developer.apple.com/documentation/swiftui/section) and is used to group related content within [`List`](list), [`Form`](form) or [`Picker`](picker) components.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/section/ios-light.webp"
  darkSrc="/static/images/expo-ui/section/ios-dark.webp"
  alt="Two Sections within a Form, each with a header and grouped Toggles"
/>

## Installation

<APIInstallSection />

## Usage

### Basic section with title

Use the `title` prop for simple sections with a text header.

<ComponentExample
  title="BasicSectionExample.tsx"
  src="/static/images/expo-ui/examples/section-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/section-basic-ios-dark.webp"
  alt="A list with a Settings header above General, Privacy, and Notifications rows">

```tsx
import { Host, List, Section, Text } from '@expo/ui/swift-ui';

export default function BasicSectionExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="Settings">
          <Text>General</Text>
          <Text>Privacy</Text>
          <Text>Notifications</Text>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Section with custom header and footer

Use the `header` and `footer` props for custom views. These props are only used when `title` is not provided.

<ComponentExample
  title="CustomHeaderFooterExample.tsx"
  src="/static/images/expo-ui/examples/section-header-footer-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/section-header-footer-ios-dark.webp"
  alt="A section with a location icon in its header, a toggle row, and footer text below">

```tsx
import {
  Host,
  List,
  Section,
  Toggle,
  Text,
  HStack,
  Image,
} from '@expo/ui/swift-ui';
import { useState } from 'react';

export default function CustomHeaderFooterExample() {
  const [locationEnabled, setLocationEnabled] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section
          header={
            <HStack>
              <Image
                systemName="location.fill"
                color="blue"
                size={16}
              />
              <Text>Location Services</Text>
            </HStack>
          }
          footer={
            <Text>
              Enabling location services allows the app to provide
              personalized recommendations.
            </Text>
          }>
          <Toggle
            label="Enable location"
            isOn={locationEnabled}
            onIsOnChange={setLocationEnabled}
          />
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Collapsible section

Use the `isExpanded` prop to control whether the section is expanded or collapsed. When provided, the section becomes collapsible. Use `onIsExpandedChange` to handle state changes.

> **Note:** Collapsible sections require iOS 17+ and tvOS 17+, and the list must use the `sidebar` style. Footer is not supported for collapsible sections.

<ComponentExample
  title="CollapsibleSectionExample.tsx"
  src="/static/images/expo-ui/examples/section-collapsible-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/section-collapsible-ios-dark.webp"
  alt="Two collapsed sections, Favorites and Recents, each with a disclosure chevron">

```tsx
import { useState } from 'react';
import { Host, List, Section, Text } from '@expo/ui/swift-ui';
import { listStyle } from '@expo/ui/swift-ui/modifiers';

export default function CollapsibleSectionExample() {
  const [favoritesExpanded, setFavoritesExpanded] = useState(false);
  const [recentsExpanded, setRecentsExpanded] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[listStyle('sidebar')]}>
        <Section
          title="Favorites"
          isExpanded={favoritesExpanded}
          onIsExpandedChange={setFavoritesExpanded}>
          <Text>Home</Text>
          <Text>Work</Text>
          <Text>Gym</Text>
        </Section>
        <Section
          title="Recents"
          isExpanded={recentsExpanded}
          onIsExpandedChange={setRecentsExpanded}>
          <Text>Coffee Shop</Text>
          <Text>Library</Text>
          <Text>Park</Text>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Multiple sections in a form

Sections work within `Form` components to organize form controls into logical groups.

<ComponentExample
  title="FormSectionsExample.tsx"
  src="/static/images/expo-ui/examples/section-form-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/section-form-ios-dark.webp"
  alt="A form with Appearance, Notifications, and Account sections holding toggles, a picker, and a red Sign out button">

```tsx
import { useState } from 'react';
import {
  Host,
  Form,
  Section,
  Toggle,
  Picker,
  Text,
  Button,
} from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

export default function FormSectionsExample() {
  const [darkMode, setDarkMode] = useState(false);
  const [notifications, setNotifications] = useState(true);
  const [language, setLanguage] = useState(0);
  const languages = ['English', 'Spanish', 'French', 'German'];

  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <Section title="Appearance">
          <Toggle
            label="Dark Mode"
            isOn={darkMode}
            onIsOnChange={setDarkMode}
          />
          <Picker
            label="Language"
            selection={language}
            onSelectionChange={setLanguage}
            modifiers={[pickerStyle('menu')]}>
            {languages.map((lang, index) => (
              <Text key={index} modifiers={[tag(index)]}>
                {lang}
              </Text>
            ))}
          </Picker>
        </Section>
        <Section title="Notifications">
          <Toggle
            label="Push Notifications"
            isOn={notifications}
            onIsOnChange={setNotifications}
          />
        </Section>
        <Section title="Account">
          <Button
            label="Sign out"
            role="destructive"
            onPress={() => alert('Signed out')}
          />
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Section } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/section"
  apiName="Section"
/>
